--- a/app/package.json
+++ b/app/package.json
@@ -9,9 +9,11 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-ionicons": "^4.2.0",
+    "react-icons": "^4.2.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
     "sass": "^1.32.8",
     "web-vitals": "^1.1.0"
   },
