basic structure with api and nginx

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,44 @@ services:
       - "4000:4000"
     volumes:
       - ./app/:/usr/src/app
+    networks:
+      - api
+
+  api:
+    container_name: NUTCACHE_EXPRESS_API
+    build:
+      context: ./api
+      dockerfile: dockerfile
+    environment:
+      - PORT=3000
+    depends_on:
+      - db
+    ports:
+      - "3000:3000"
+    volumes:
+      - ./api/:/usr/src/api
+    networks:
+      - api
+
+  db:
+    container_name: NUTCACHE_MONGO_DB
+    image: mongo
+    ports:
+      - "27017:27017"
+    volumes:
+      - "./data/db:/data/db"
+    networks:
+      - api
+
+  nginx:
+    container_name: NUTCACHE_NGINX
+    image: nginx
+    volumes:
+      - "./nginx:/etc/nginx/conf.d"
+    ports:
+      - "80:8080"
+    networks:
+      - api
+
+networks:
+  api:
