--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,20 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    location /sockjs-node {
+        proxy_set_header X-Real-IP  $remote_addr;
+        proxy_set_header X-Forwarded-For $remote_addr;
+        proxy_set_header Host $host;
+
+        proxy_pass http://app:4000; 
+
+        proxy_redirect off;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
     location /api {
         proxy_pass http://api:3000;
         proxy_set_header X-Real-IP $remote_addr;
