api waiting for connection do db

--- a/api/dockerfile
+++ b/api/dockerfile
@@ -6,7 +6,10 @@ WORKDIR /usr/src/api
 COPY package.json .
 RUN npm install
 
+ADD https://github.com/ufoscout/docker-compose-wait/releases/download/2.2.1/wait /wait
+RUN chmod +x /wait
+
 COPY . .
 
 EXPOSE 3000
-CMD ["npm", "run", "dev"]
+CMD /wait && npm run dev
