--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,8 @@
         "dev": "nodemon"
     },
     "dependencies": {
+        "cpf": "^2.0.1",
+        "email-validator": "^2.0.4",
         "express": "^4.17.1",
         "mongoose": "^5.11.19",
         "uuid": "^8.3.2"
